<resources>
    <string name="app_name">MyVerkep</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="user_name">Username</string>
    <string name="email_address">E-mail</string>
    <string name="password_again">Password check</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="account_type">Account type</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login_with_google">Login with Google</string>
    <string name="title_activity_listing">ListingActivity</string>
    <string name="Value">Value</string>
    <string name="remove">Remove</string>
    <string name="add_values">Add values</string>
    <string name="add">Add</string>
    <string name="new_observation">New Observation</string>
    <string name="wbc">WBC</string>
    <string name="RBC">RBC</string>
    <string name="hgb">HGB</string>
    <string name="hct">HCT</string>
    <string name="mcv">MCV</string>
    <string name="mch">MCH</string>
    <string name="mchc">MCHC</string>
    <string name="plt">PLT</string>
    <string name="rdw_sd">RDW-SD</string>
    <string name="rdw_cv">RDW-CV</string>
    <string name="pdw">PDW</string>
    <string name="mpv">MPV</string>
    <string name="pct">PCT</string>
    <string name="neut">NEUT</string>
    <string name="lymph">LYMPH</string>
    <string name="mono">MONO</string>
    <string name="eo">EO</string>
    <string name="baso">BASO</string>
    <string name="ig">IG</string>
    <string name="add_new_page">Add new page</string>
    <string name="wbc_placeholder">WBC_placeholder</string>

    <string-array name="keysForBloodValues">
        <item>WBC</item>
        <item>RBC</item>
        <item>HGB</item>
        <item>HCT</item>
        <item>MCV</item>
        <item>MCH</item>
        <item>MCHC</item>
        <item>PLT</item>
        <item>RDW-SD</item>
        <item>RDW-CV</item>
        <item>PDW</item>
        <item>MPV</item>
        <item>PCT</item>
        <item>NEUT</item>
        <item>LYMPH</item>
        <item>MONO</item>
        <item>EO</item>
        <item>BASO</item>
        <item>IG</item>
    </string-array>
    <string-array name="valuesForBloodKeys">
        <item>4.00–11.00</item>
        <item>3.50–5.00</item>
        <item>120–165</item>
        <item>37.0–47.0</item>
        <item>80.0–100.0</item>
        <item>27.0–34.0</item>
        <item>320–360</item>
        <item>150–450</item>
        <item>35.0–56.0</item>
        <item>11.0–16.0</item>
        <item>15.0–17.0</item>
        <item>6.5–12.0</item>
        <item>0.11–0.28</item>
        <item>2.00–7.00</item>
        <item>0.80–4.00</item>
        <item>0.12–1.20</item>
        <item>0.00–0.50</item>
        <item>0.00–0.01</item>
        <item>0.00–7.00</item>
    </string-array>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="v_lassz_d_tumot">Válassz dátumot!</string>
    <string name="j_eredm_ny_felvitele">Új eredmény felvitele</string>
    <string name="m_gsem">Mégsem</string>
    <string name="j_eredm_ny">Új eredmény</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="e_mail">E-mail</string>
    <string name="bel_p_s">Belépés</string>
    <string name="date_placeholder">Date_placeholder:</string>
    <string name="eredm_ny">Eredmény:</string>
    <string name="rbc_placeholder">RBC_placeholder</string>
    <string name="hgb_placeholder">HGB_placeholder</string>
    <string name="hct_placeholder">HCT_placeholder</string>
    <string name="mcv_placeholder">MCV_placeholder</string>
    <string name="mch_placeholder">MCH_placeholder</string>
    <string name="mchc_placeholder">MCHC_placeholder</string>
    <string name="plt_placeholder">PLT_placeholder</string>
    <string name="rdwsd_placeholder">RDWSD_placeholder</string>
    <string name="rdwcv_placeholder">RDWCV_placeholder</string>
    <string name="pdw_placeholder">pdw_placeholder</string>
    <string name="mpv_placeholder">MPV_placeholder</string>
    <string name="pct_placeholder">PCT_placeholder</string>
    <string name="neut_placeholder">NEUT_placeholder</string>
    <string name="lmyph_placeholder">LMYPH_placeholder</string>
    <string name="mono_placeholder">MONO_placeholder</string>
    <string name="eo_placeholder">eo_placeholder</string>
    <string name="baso_placeholder">BASO_placeholder</string>
    <string name="ig_placeholder">IG_placeholder</string>
    <string name="m_dos_t">Módosít</string>
    <string name="t_r_l">Töröl</string>
    <string name="norm_l_rt_k">Normál érték:</string>
    <string name="wbc_basedon">wbc_basedOn</string>
    <string name="rbc_basedon">rbc_basedOn</string>
    <string name="hgb_basedon">hgb_basedOn</string>
    <string name="mcv_basedon">mcv_basedOn</string>
    <string name="mch_basedon">mch_basedOn</string>
    <string name="mchc_basedon">mchc_basedOn</string>
    <string name="plt_basedon">plt_basedOn</string>
    <string name="rdwsd_basedon">rdwsd_basedOn</string>
    <string name="rdwcv_basedon">rdwcv_basedOn</string>
    <string name="pdw_basedon">pdw_basedOn</string>
    <string name="mpv_basedon">mpv_basedOn</string>
    <string name="pct_basedon">pct_basedOn</string>
    <string name="neut_basedon">neut_basedOn</string>
    <string name="lymph_basedon">lymph_basedOn</string>
    <string name="mono_basedon">mono_basedOn</string>
    <string name="eo_basedon">eo_basedOn</string>
    <string name="baso_basedon">baso_basedOn</string>
    <string name="ig_basedon">ig_basedOn</string>
    <string name="m_dos_t_s">Módosítás</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="jelsz">Jelszó</string>
    <string name="jelsz_jra">Jelszó újra</string>
</resources>